# ai.cli

./: .clang-format  .clang-tidy  .clangd  .gitignore  CMakeLists.txt  README.md  build.sh
.ai/: system_prompt.md
.github/workflows/: cmake-multi-platform.yml  msys2.yml  release.yml
.vim/: coc-settings.json
.vim/after/ftplugin/: cpp.vim
cmake/: Dependencies.cmake  generate_string_header.cmake
include/: cli_parser.hpp  openai_client.hpp
include/ai/: args.h  base64.h  chat.h  clip.h  config.h  function.h  glob.h  history.h  logging.h  matchglob.h  models.h  openai.h  response.h  system_prompt.h  terminal.h  tool_calls.h  update.h  utils.h
include/ai/tools/: bash.h  default.h  filesystem.h  git.h
schemas/: config.schema.json
src/: args.cc  args.cpp  args.h  base64.cpp  base64.h  chat.cc  chat.cpp  chat.h  cli_parser.cpp  clip.h  clip_linux.cpp  clip_macos.mm  clip_other.cpp  clip_win.cpp  config.cpp  function.cc  function.cpp  glob.cpp  history.cc  history.cpp  logging.cpp  logging.h  main.cc  main.cpp  matchglob.cpp  models.cc  models.cpp  models.h  openai.cc  openai.cpp  openai.h  openai_client.cpp  response.cc  response.cpp  response.h  stream.cpp  stream.h  system_prompt.cc  system_prompt.cpp  tool_calls.cpp  (+8 more)
src/base/: base64.cc  base64.h  database.cc  database.h  download.cc  download.h  expected.h  file.cc  file.h  glob.cc  glob.h  io.cc  io.h  logging.cc  logging.h  matchglob.cc  matchglob.h  scope_exit.h  scoped_handle.h  string.cc  string.h  temp_dir.cc  temp_dir.h  temp_file.cc  temp_file.h  terminal.cc  terminal.h  timer.h
src/tools/: ask_user.cpp  bash.cpp  bash.h  bash.json  bash_tools_json.h.in  cmd.cpp  cmd.json  cmd_tools_json.h.in  default.cc  default.cpp  default.json  default_tools_json.h.in  execute.cpp  execute.h  filesystem.cc  filesystem.cpp  filesystem.h  filesystem.json  filesystem_tools_json.h.in  git.cpp  git.h  git.json  git_tools_json.h.in  glob.hpp  powershell.cpp  powershell.json  powershell_tools_json.h.in
src/tools/execute/: bash.cc  bash.cpp  cmd.cc  cmd.cpp  execute_command.cc  execute_command.cpp  execute_file.cpp  powershell.cc  powershell.cpp
src/tools/filesystem/: create_directory.cc  create_directory.cpp  directory_tree.cc  directory_tree.cpp  disk_space_info.cc  disk_space_info.cpp  edit_file.cc  edit_file.cpp  execute_file.cpp  find_files.cc  find_files.cpp  get_file_info.cc  get_file_info.cpp  list_directory.cc  list_directory.cpp  move_file.cc  move_file.cpp  read_file.cc  read_file.cpp  read_multiple_files.cc  read_multiple_files.cpp  replace_lines.cc  replace_lines.cpp  search_files.cpp  write_file.cc  write_file.cpp
src/tools/interactive/: ask_user.cc  ask_user.cpp
tests/: CMakeLists.txt  main.cc  stream_response_data.h  test_ask_user.cc  test_execute_command.cc  test_filesystem.cc  test_filter_lines.cc  test_function.cc  test_glob.cc  test_history.cc  test_matchglob.cc  test_openai.cc  test_response.cc  test_shell_tools.cc  test_stream_response.cc  test_tool_calls_stream_response.cc  test_utils.cc
tests/base/: database_test.cc  expected_test.cc  file_test.cc  glob_test.cc  matchglob_test.cc  scope_exit_test.cc  string_test.cc  temp_dir_test.cc  temp_file_test.cc  terminal_test.cc  timer_test.cc
